--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,6 +1,7 @@
 parser: '@typescript-eslint/parser'
 plugins:
   - '@typescript-eslint'
+  - 'prettier'
 parserOptions:
   ecmaVersion: 2018
   sourceType: module
