--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "garden-back",
-  "version": "1.0.1",
+  "version": "1.0.4",
   "description": "A virtual garden for all kinds of folks",
   "main": "build/index.js",
   "author": "Marcos Kicis",
@@ -26,10 +26,11 @@
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
-    "eslint": "^7.32.0",
     "express": "^4.17.1",
+    "express-mongo-sanitize": "^2.1.0",
     "helmet": "^4.6.0",
     "http-errors": "^1.8.0",
+    "http-status-enum": "^1.0.2",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "mongoose": "^6.0.9",
@@ -37,18 +38,27 @@
     "node-cron": "^3.0.0",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.3",
-    "winston": "^3.3.3"
+    "winston": "^3.3.3",
+    "xss-clean": "^0.1.1",
+    "yaml": "^1.10.2"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.12",
-    "@types/jsonwebtoken": "^8.5.5",
-    "@types/morgan": "^1.9.3",
-    "@types/winston": "^2.4.4",
     "@types/cookie-parser": "^1.4.2",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.5",
     "@types/mongoose": "^5.11.97",
+    "@types/morgan": "^1.9.3",
     "@types/node": "^16.10.3",
+    "@types/winston": "^2.4.4",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "@typescript-eslint/parser": "^4.33.0",
+    "eslint": "^7.32.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.2.4",
+    "prettier": "^2.4.1",
     "ts-node-dev": "^1.1.8"
   }
 }
