--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "garden-back",
-  "version": "1.0.8",
+  "version": "1.1.0",
   "description": "A virtual garden for all kinds of folks",
   "main": "build/index.js",
   "author": "Marcos Kicis",
@@ -17,13 +17,14 @@
     "url": "git+https://github.com/hastoontests/desafio-d1.git"
   },
   "keywords": [],
-  "license": "MIT",
+  "license": "UNLICENSED",
   "bugs": {
     "url": "https://github.com/hastoontests/desafio-d1/issues"
   },
   "homepage": "https://github.com/hastoontests/desafio-d1#readme",
   "dependencies": {
     "@types/node-cron": "^3.0.0",
+    "@types/supertest": "^2.0.11",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
@@ -37,6 +38,7 @@
     "mongoose": "^6.0.9",
     "morgan": "^1.10.0",
     "node-cron": "^3.0.0",
+    "node-schedule": "^2.0.0",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.3",
     "winston": "^3.3.3",
@@ -47,10 +49,12 @@
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.0.2",
     "@types/jsonwebtoken": "^8.5.5",
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.3",
     "@types/node": "^16.10.3",
+    "@types/node-schedule": "^1.3.2",
     "@types/winston": "^2.4.4",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
@@ -59,7 +63,9 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.2.4",
+    "supertest": "^6.1.6",
     "prettier": "^2.4.1",
+    "ts-jest": "^27.0.6",
     "ts-node-dev": "^1.1.8"
   }
 }
